--- a/Exam-3B1/App_LocalResources/Default.aspx.zh.resx
+++ b/Exam-3B1/App_LocalResources/Default.aspx.zh.resx
@@ -118,42 +118,42 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btn_submit" xml:space="preserve">
-    <value>Submit</value>
+    <value>提交</value>
   </data>
   <data name="lbl_gender" xml:space="preserve">
-    <value>I am:</value>
+    <value>我:</value>
   </data>
   <data name="lbl_github" xml:space="preserve">
-    <value>Please visit me on </value>
+    <value>請訪問我的 </value>
   </data>
   <data name="lbl_graduate" xml:space="preserve">
-    <value>I plan to graduate on:</value>
+    <value>我打算在畢業:</value>
   </data>
   <data name="lbl_graduateResponse" xml:space="preserve">
-    <value>I hope you have a great day when you graduate on </value>
+    <value>我希望你有一個偉大的日子，當你畢業的 </value>
   </data>
   <data name="lbl_hello" xml:space="preserve">
-    <value>Hello, </value>
+    <value>您好, </value>
   </data>
   <data name="lbl_language" xml:space="preserve">
-    <value>Please choose your language:</value>
+    <value>請選擇您的語言:</value>
   </data>
   <data name="lbl_name" xml:space="preserve">
-    <value>My name is:</value>
+    <value>我的名字是:</value>
   </data>
   <data name="lbl_salary" xml:space="preserve">
-    <value>When I graduate, I plan to earn:</value>
+    <value>當我畢業了，我打算掙:</value>
   </data>
   <data name="lbl_salaryResponse" xml:space="preserve">
-    <value>I wish you well in your career after graduation. I hope you earn </value>
+    <value>祝你順利畢業後，你的職業生涯。我希望你賺 </value>
   </data>
   <data name="lbl_salaryResponse2" xml:space="preserve">
-    <value> as a salary in your first job!</value>
+    <value> 在你的第一份工作的薪水！</value>
   </data>
   <data name="rbtn_female" xml:space="preserve">
-    <value>Female</value>
+    <value>女</value>
   </data>
   <data name="rbtn_male" xml:space="preserve">
-    <value>Male</value>
+    <value>男</value>
   </data>
 </root>
